--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -322,6 +322,6 @@
                 <div class="dot four"></div>
             </div>
         </div>
-        <h4> Ver 1.0.2 </h4>
+        <span style="text-align: center;opacity: 0.3;padding: 0.5em;font-size: 12px;"> Ver 1.0.2 </span>
     </section>
 </ion-content>
