after omer new hit code

--- a/src/app/shared/activity-history/activity-history.component.html
+++ b/src/app/shared/activity-history/activity-history.component.html
@@ -73,7 +73,7 @@
                     <div class="hidden-content" #container>
                         <ng-container *ngIf="train.openShowMore">
                             <img src="assets/bullseye.png">
-                            <div class="hit" *ngFor="let shot of train.rawHitsLocation; let i = index" style="position: absolute;  "
+                            <div class="hit" *ngFor="let shot of train.rawHitsLocation; let i = index" style="position: absolute;  "++++
                                  [style.top.px]=shot.y
                                  [style.right.px]=shot.x>
                                 {{i + 1}}
