--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -115,7 +115,7 @@
                 </ion-slide>
                 <ion-slide>
                     <div class="slide-container" *ngIf="data.rateOfFireChart">
-                        <p>RATE OF FILE</p>
+                        <p>RATE OF FIRE</p>
                         <P class="middle">{{data.rateOfFireChart.userAvg | number : '1.2-2'}}</P>
 
                         <div class="chart-container">
