--- a/src/app/shared/activity-history/activity-history.component.html
+++ b/src/app/shared/activity-history/activity-history.component.html
@@ -24,7 +24,7 @@
             <span>⋮</span>
         </div>
     </header>
-    <ion-list class="cards" scrollY="true">
+    <ion-list style="overflow-y: auto;" class="cards" scrollY="true">
         <ion-item *ngFor="let train of trains;let i=index;">
             <div class="card">
                 <div class="target">
@@ -44,7 +44,6 @@
                         <p class="score-value"><b>{{train.rawHitsLocation.length}}/ {{train.numberOfBullets}}</b></p>
                         <p>HITS</p>
                     </div>
-
                     <div class="range">
                         <b>{{train.range}}</b>
                         <p>RANGE</p>
@@ -72,11 +71,116 @@
                     </div>
                     <div class="hidden-content" #container>
                         <ng-container *ngIf="train.openShowMore">
-                            <img src="assets/bullseye.png">
-                            <div class="hit" *ngFor="let shot of train.rawHitsLocation; let i = index" style="position: absolute;  "++++
-                                 [style.top.px]=shot.y
-                                 [style.right.px]=shot.x>
-                                {{i + 1}}
+                            <div class="hidden-content-container">
+                                <img src="assets/bullseye.png">
+                                <div class="hit" *ngFor="let shot of train.rawHitsLocation; let i = index"
+                                     style="position: absolute;"
+                                     [style.top.px]=shot.y
+                                     [style.left.px]=shot.x>
+                                    {{i + 1}}
+                                </div>
+                                <table>
+                                    <thead>
+                                    <tr>
+                                        <th>
+                                            <p>Bullet</p>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                 viewBox="0 0 24 24">
+                                                <defs>
+                                                    <style>
+                                                        .cls-3 {
+                                                            fill: #fff
+                                                        }
+                                                    </style>
+                                                </defs>
+                                                <g id="Icon_Favorite_Filled" data-name="Icon / Favorite / Filled"
+                                                   transform="translate(-2 -1)">
+                                                    <path id="Box" fill="none" d="M0 0H24V24H0z"
+                                                          transform="translate(2 1)"/>
+                                                    <rect id="Rectangle_1747" width="24" height="24" fill="#373737"
+                                                          data-name="Rectangle 1747"
+                                                          rx="5" transform="translate(2 1)"/>
+                                                    <g id="_002-bullet" data-name="002-bullet"
+                                                       transform="translate(6.164 5)">
+                                                        <path id="Path_1178"
+                                                              d="M15.689.136A.464.464 0 0 0 15.361 0h-.007A6.58 6.58 0 0 0 11.3 1.58l-1.7.851a.463.463 0 0 0-.12.087L1.5 10.5a.463.463 0 0 0-.141.183L.838 11.9l-.046-.046a.464.464 0 0 0-.656.656l3.177 3.177a.464.464 0 0 0 .656-.656l-.046-.046 1.223-.522a.463.463 0 0 0 .183-.141l7.978-7.978a.463.463 0 0 0 .087-.12l.851-1.7A6.58 6.58 0 0 0 15.824.471a.463.463 0 0 0-.136-.335zM3.217 14.28l-1.672-1.672.4-.935 2.208 2.208zm1.745-.9l-2.517-2.517L9.807 3.5l2.516 2.516zm7.892-8.144l-2.265-2.264.888-.446L13.3 4.347zm.989-1.656l-1.6-1.6A5.644 5.644 0 0 1 14.85.976a5.607 5.607 0 0 1-1.008 2.603z"
+                                                              class="cls-3" data-name="Path 1178"
+                                                              transform="translate(-.001)"/>
+                                                        <path id="Path_1179"
+                                                              d="M213.051 237.636l-1.007 1.007a.464.464 0 0 0 .656.656l1.007-1.007a.464.464 0 0 0-.656-.656z"
+                                                              class="cls-3" data-name="Path 1179"
+                                                              transform="translate(-205.358 -230.16)"/>
+                                                    </g>
+                                                </g>
+                                            </svg>
+                                        </th>
+                                        <th>
+                                            <p>Split</p>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                 viewBox="0 0 24 24">
+                                                <g id="Icon_Favorite_Filled" data-name="Icon / Favorite / Filled"
+                                                   transform="translate(-.057)">
+                                                    <path id="Box" fill="none" d="M0 0H18V18H0z"
+                                                          transform="translate(3.057 3)"/>
+                                                    <rect id="Rectangle_1867" width="24" height="24" fill="#363636"
+                                                          data-name="Rectangle 1867" rx="5"
+                                                          transform="translate(.057)"/>
+                                                    <path id="_005-split" fill="#fff"
+                                                          d="M11.985 2.209L9.776 0 7.567 2.209l.663.663 1.078-1.078v1.89a2.354 2.354 0 0 1-.808 1.78L6.66 7.055a3.355 3.355 0 0 0-.671.795 3.2 3.2 0 0 0-.659-.79l-1.84-1.6a2.354 2.354 0 0 1-.813-1.78V1.794l1.078 1.078.663-.663L2.209 0 0 2.209l.663.663L1.74 1.794v1.89a3.291 3.291 0 0 0 1.136 2.488l1.84 1.595a2.346 2.346 0 0 1 .8 1.77V12h.937V9.542a2.36 2.36 0 0 1 .824-1.78l1.832-1.59a3.291 3.291 0 0 0 1.136-2.488v-1.89l1.078 1.078zm0 0"
+                                                          data-name="005-split" transform="translate(5.937 6)"/>
+                                                </g>
+                                            </svg>
+                                        </th>
+                                        <th>
+                                            <p>Time</p>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                 viewBox="0 0 24 24">
+                                                <defs>
+                                                    <style>
+                                                        .cls-3 {
+                                                            fill: #fff
+                                                        }
+                                                    </style>
+                                                </defs>
+                                                <g id="Icon_Favorite_Filled" data-name="Icon / Favorite / Filled"
+                                                   transform="translate(.286)">
+                                                    <path id="Box" fill="none" d="M0 0H18V18H0z"
+                                                          transform="translate(2.714 3)"/>
+                                                    <rect id="Rectangle_1866" width="24" height="24" fill="#363636"
+                                                          data-name="Rectangle 1866" rx="5"
+                                                          transform="translate(-.286)"/>
+                                                    <g id="_003-time" data-name="003-time"
+                                                       transform="translate(6.218 6)">
+                                                        <g id="Group_624" data-name="Group 624">
+                                                            <g id="Group_623" data-name="Group 623">
+                                                                <path id="Path_1180"
+                                                                      d="M6 0a6 6 0 1 0 6 6 6 6 0 0 0-6-6zm0 11.143A5.143 5.143 0 1 1 11.143 6 5.143 5.143 0 0 1 6 11.143z"
+                                                                      class="cls-3" data-name="Path 1180"/>
+                                                            </g>
+                                                        </g>
+                                                        <g id="Group_626" data-name="Group 626"
+                                                           transform="translate(2.143 2.143)">
+                                                            <g id="Group_625" data-name="Group 625">
+                                                                <path id="Path_1181"
+                                                                      d="M89.19 85.333a.429.429 0 0 0-.429.429v3h-3a.429.429 0 0 0 0 .857h3.429a.429.429 0 0 0 .429-.429v-3.428a.429.429 0 0 0-.429-.429z"
+                                                                      class="cls-3" data-name="Path 1181"
+                                                                      transform="translate(-85.333 -85.333)"/>
+                                                            </g>
+                                                        </g>
+                                                    </g>
+                                                </g>
+                                            </svg>
+                                        </th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr *ngFor="let shot of train.shotItems; let i = index">
+                                        <td>{{i + 1}}</td>
+                                        <td> {{shot.timeSplit}}</td>
+                                        <td> {{shot.time}}</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </ng-container>
                     </div>
